--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,13 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="sweetalert2.min.css">
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="sweetalert2.min.js"></script>
+  
+
 
 </head>
 
